<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chain Reaction</string>
    <string name="select_players">Select Number of Players</string>
    <string name="start_game">Start Game</string>
    <string name="player_turn">Player %1$d\'s Turn</string>
    <string name="player_wins">Player %1$d wins!</string>
    <string name="game_over">Game Over!</string>
    <string name="restart_game">Restart Game</string>
    <string name="main_menu">Main Menu</string>
</resources>